title et description ajoutés, ajout du robots.txt, responsive, liens modifiés

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="La chouette agence, expert en création de site internet et en référencement naturel, 
+										vous accueille au 2 place Sathonay, 69001 Lyon. Remplissez le formulaire ou envoyez-nous un mail 
+										pour nous contacter. Notre équipe de webdesigners est là pour vous conseiller et réaliser vos projets.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     	
@@ -18,7 +20,7 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-    <title>page2</title>
+    <title>La Chouette agence - Contact Agence web design Lyon, Création de site internet et stratégies commerciales</title>
 
     
 <!-- Analytics -->
