--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="">
+	<meta name="description"
+		content="La chouette Agence est une agence de web design spécialiste en création de site internet basée sur Lyon. 
+				Nos webdesigners vous accompagnent dans l'accomplissement de vos projets et dans les stratégies marketing.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -21,7 +23,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>.</title>
+	<title>La Chouette Agence, Agence web design Lyon, Création de site internet et stratégies commerciales </title>
 
 
 	<!-- Analytics -->
@@ -39,7 +41,7 @@
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
-					<div class="navbar-header">						
+					<div class="navbar-header">
 						<a class="-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -89,7 +91,10 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<p class="mini-description">
+							La chouette agence est une agence de web design qui aide <br> les entreprises à devenir
+							attractives et visibles sur Internet.
+						</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -132,8 +137,13 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
-							src="img/citation.png" />
+						<p>
+							<q class="citation">La chouette agence est une excellente agence web ! Les web designers ont
+								réussi à
+								capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aider à
+								doubler nos ventes en ligne a Lyon.</q><br>
+							Maxime Guibard, PDG de À vos fourchettes
+						</p>
 
 					</div>
 				</div>
@@ -171,7 +181,9 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<h2>
+							Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.
+						</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -203,9 +215,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
+								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="Plusieurs appareils informatiques de photographiques illustrant le service de création de site internet pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -216,9 +228,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
+								src="img/4.jpg" class="img-responsive portfolio-thumb"
 								alt="Deux personne travaillant sur la conception d'un site web pour une agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
@@ -257,67 +269,62 @@
 						<p class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
+
 						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
+
+							<div class="logo-social">
 								<div class="text-center">
 									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
-							<div class="col-sm-3">
+
+							<div class="logo-social">
 								<div class="text-center">
 									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
-							<div class="col-sm-3">
+
+							<div class="logo-social">
 								<div class="text-center">
 									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
-							<div class="col-sm-3">
+
+							<div class="logo-social">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
+
 						</div>
 						<div class="row">
-							<div class="col-sm-4">
-								Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
+
+							<div class="col-sm-6">
 								Annuaires liste 1
 								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
+									<li><a href="annuaireagence.com" class="partenaire">annuaireagence.com</a></li>
+									<li><a href="annuaireseo.com"  class="partenaire">annuaireseo.com</a></li>
+									<li><a href="annuairemarketing.com" class="partenaire">annuairemarketing.com</a></li>
+									<li><a href="123seoture.com" class="partenaire">123seo.com</a></li>
+									<li><a href="123site.com" class="partenaire">123site.com</a></li>
+									<li><a href="annuairewordpress.com" class="partenaire">annuairewordpress.com</a></li>
+									<li><a href="listeagence.com" class="partenaire">listeagence.com</a></li>
+									<li><a href="meilleuresagencesparis.com" class="partenaire">meilleuresagencesparis.com</a></li>
+									<li><a href="listeseo.com" class="partenaire">listeseo.com</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								Annuaires liste 2
 								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+									<li><a href="betterseo.com" class="partenaire">betterseo.com</a></li>
+									<li><a href="ameliorerseo.com" class="partenaire">ameliorerseo.com</a></li>
+									<li><a href="seojuicelien.com" class="partenaire">seojuicelien.com</a></li>
+									<li><a href="meilleursliens.com" class="partenaire">meilleursliens.com</a></li>
+									<li><a href="backlink.com" class="partenaire">backlink.com</a></li>
+									<li><a href="linkjuiceannuaire.com" class="partenaire">linkjuiceannuaire.com</a></li>
+									<li><a href="remontersurgoogle.com" class="partenaire">remontersurgoogle.com</a></li>
+									<li><a href="vraiseofiable.com" class="partenaire">vraiseofiable.com</a></li>
 								</ul>
 							</div>
 						</div>
